--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal .slides section > section {
   line-height: 1.3;
   font-weight: inherit;
+  border: 2px solid red;
 }
 
 .reveal .slides section {
@@ -174,11 +175,12 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .reveal ul {
   list-style-type: disc;
-  font-size: 0.7em;
+  font-size: 1.2em;
 }
 
 .reveal ul ul {
   list-style-type: square;
+  font-size: 0.8em;
 }
 
 .reveal ul ul ul {
@@ -406,6 +408,7 @@ div .two-column {
     justify-content: space-around;
     min-height: 80%;
     max-height: 85%;
+    border: 2px solid yellowgreen;
 }
 div .column,
 div .column-top-align {
@@ -413,6 +416,7 @@ div .column-top-align {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 2px solid purple;
 }
 
 div .column {
@@ -423,10 +427,6 @@ div .column img:not(.image-transparent){
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
     max-height: 80%;
-}
-
-.column ul {
-    font-size: 1.1em;
 }
 
 .jlite-iframe {
