--- a/src/style.css
+++ b/src/style.css
@@ -422,10 +422,13 @@ div .column-top-align {
 div .column {
     justify-content: center;
 }
+div .column-top-align {
+    justify-content: top;
+}
 
 div .column img:not(.image-transparent){
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.35); */
     max-height: 80%;
 }
 
