--- a/src/style.css
+++ b/src/style.css
@@ -258,10 +258,11 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .reveal pre code {
   display: block;
-  padding: 5px;
+  padding: 1em;
   overflow: auto;
   max-height: 400px;
   word-wrap: normal;
+  border-radius: 0.2em;
 }
 
 .reveal .code-wrapper {
