--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal .slides section > section {
   line-height: 1.3;
   font-weight: inherit;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .reveal .slides section {
