--- a/src/style.css
+++ b/src/style.css
@@ -409,7 +409,7 @@ div .two-column {
     justify-content: space-around;
     min-height: 80%;
     max-height: 85%;
-    border: 2px solid yellowgreen;
+    /* border: 2px solid yellowgreen; */
 }
 div .column,
 div .column-top-align {
@@ -417,7 +417,7 @@ div .column-top-align {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
 }
 
 div .column {
