--- a/src/style.css
+++ b/src/style.css
@@ -194,11 +194,11 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 }
 
 .reveal ul li {
-  margin-bottom: 0.5em;
+  margin: 0.5em;
 }
 
 .reveal ul ul li {
-  margin-bottom: 0;
+  margin: 0.2em;
 }
 
 .reveal ul ul,
@@ -427,10 +427,11 @@ div .column-top-align {
     justify-content: top;
 }
 
-div .column img:not(.image-transparent){
-    border-radius: 10px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.35); */
-    max-height: 80%;
+div .single-column {
+  min-height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .jlite-iframe {
