--- a/src/style.css
+++ b/src/style.css
@@ -247,7 +247,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   font-family: var(--r-code-font);
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0 5px 15px #33333333);
 }
 
 .reveal code {
