--- a/src/style.css
+++ b/src/style.css
@@ -409,7 +409,7 @@ div .two-column {
     justify-content: space-around;
     min-height: 80%;
     max-height: 85%;
-    border: 2px solid yellowgreen;
+    /* border: 2px solid yellowgreen; */
 }
 div .column,
 div .column-top-align {
@@ -417,7 +417,7 @@ div .column-top-align {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
 }
 
 div .column {
@@ -433,6 +433,14 @@ div .single-column {
   justify-content: center;
   align-items: center;
 }
+
+div .column .img-shadow {
+  filter: drop-shadow(0 5px 15px #33333366);
+}
+
+/*********************************************
+ * JUPYTERLITE
+ *********************************************/
 
 .jlite-iframe {
     height: 85%;
