--- a/src/style.css
+++ b/src/style.css
@@ -444,7 +444,7 @@ div .column .img-shadow {
 
 .jlite-iframe {
     height: 85%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+    filter: drop-shadow(0 5px 15px #33333366);
 }
 
 .jlite-iframe iframe {
