--- a/src/style.css
+++ b/src/style.css
@@ -375,7 +375,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .reveal .slide-number {
     background: none;
-    color: var(--r-main-color);
+    color: #171b2c86;
+    bottom: unset;
+    top: 8px;
 }
 
 .reveal .controls-arrow {
@@ -388,6 +390,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
   color: var(--r-link-color);
+  height: 5px;
 }
 
 /*********************************************
