--- a/src/style.css
+++ b/src/style.css
@@ -433,6 +433,7 @@ div .column-top-align {
 div .single-column {
   min-height: 70%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
